--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,126 @@
-<header class="header">
-  <div class="container">
+<header class="header" id="header">
+  <div class="header-wrapper">
     <nav class="nav">
-      <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
-      </a>
+      <a
+        class="nav-logo"
+        href="./index.html"
+        aria-label="Site logo"
+        data-text="Tetiana"
+        >Tetiana</a
+      >
+      <button class="desktop-menu-btn">Menu</button>
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
+          <a class="nav-link" href="#hero" data-lang-key="home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
+          <a class="nav-link" href="#skills" data-lang-key="skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#projects" data-lang-key="projects"
+            >Projects</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">CV</a>
+        </li>
+        <li class="nav-item-contact">
+          <button
+            class="nav-link-contact"
+            href="#contact"
+            data-lang-key="contact"
+          >
+            Contact
+          </button>
         </li>
       </ul>
     </nav>
+    <div class="nav-btn-wrapper">
+      <button
+        class="theme-toggle"
+        id="theme-toggle"
+        title="Switch to dark mode"
+      ></button>
+      <button class="lang-toggle" title="Switch to Polish" data-lang="en">
+        PL
+      </button>
+      <button class="burger-menu" title="Menu" aria-expanded="false">
+        <svg
+          width="45"
+          height="24"
+          viewBox="0 0 45 27"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <line y1="1.5" x2="45" y2="1.5" stroke-width="2" />
+          <line y1="13.5" x2="45" y2="13.5" stroke-width="2" />
+          <line y1="25.5" x2="45" y2="25.5" stroke-width="2" />
+        </svg>
+      </button>
+    </div>
+  </div>
+  <div class="mobile-menu">
+    <button class="close-menu-btn" title="Close menu">
+      <svg
+        width="36"
+        height="34"
+        viewBox="0 0 36 34"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <line
+          x1="2.70711"
+          y1="1.29289"
+          x2="34.5269"
+          y2="33.1127"
+          stroke-width="2"
+        />
+        <line
+          x1="1.29289"
+          y1="33.1127"
+          x2="33.1127"
+          y2="1.29292"
+          stroke-width="2"
+        />
+      </svg>
+    </button>
+    <ul class="menu-list">
+      <li class="menu-item">
+        <a
+          class="menu-link {=$highlight-act}"
+          href="#hero"
+          data-lang-key="menu-home"
+          >Home</a
+        >
+      </li>
+      <li class="menu-item">
+        <a
+          class="menu-link {=$highlight-act}"
+          href="#skills"
+          data-lang-key="menu-skills"
+          >Skills</a
+        >
+      </li>
+      <li class="menu-item">
+        <a
+          class="menu-link {=$highlight-curr}"
+          href="#projects"
+          data-lang-key="menu-projects"
+          >Projects</a
+        >
+      </li>
+      <li class="menu-item">
+        <a class="menu-link {=$highlight-curr}" href="">CV</a>
+      </li>
+      <li class="menu-item-contact">
+        <button
+          class="menu-link-contact"
+          href="#contact"
+          data-lang-key="menu-contact"
+        >
+          Contact
+        </button>
+      </li>
+    </ul>
   </div>
 </header>
