--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -1,18 +1,653 @@
-@keyframes slide {
-  from {
-    transform: translateX(-140%) translateY(-50%);
+/* Styles for Mobile devices */
+
+/* Slider */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.logos-wrapper {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.logos-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.logos-track {
+  display: flex;
+  gap: 120px;
+  animation: moveLogos 20s linear infinite;
+}
+
+.logos-track img {
+  height: 40px;
+  width: auto;
+  display: inline-block;
+  cursor: pointer;
+}
+
+@keyframes moveLogos {
+  0% {
+    transform: translateX(0);
   }
-  to {
-    transform: translateX(-104%) translateY(-50%);
+  100% {
+    transform: translateX(-70%);
   }
 }
-@keyframes stretch {
-  from {
-    opacity: 0;
-    transform: translateX(-50%) translateY(100%) scale(0.2);
+
+.logos-track:hover {
+  animation-play-state: paused;
+}
+
+/* Зупинка при кліку (через JavaScript) */
+.logos-track.paused {
+  animation-play-state: paused;
+}
+
+/* Work hard */
+
+.typo {
+  cursor: pointer;
+  color: rgb(17, 17, 17);
+  opacity: 1;
+  font-family: 'Oswald', Helvetica, Arial, sans-serif;
+  font-size: 5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  transition: text-shadow 0.1s linear;
+}
+
+/* Bouncing shapes */
+
+.shape-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.shape {
+  position: absolute;
+  display: block;
+  left: 50%;
+  bottom: 0;
+  margin-left: calc(-1 * (var(--base_scale) / 2));
+  margin-bottom: var(--floor);
+  transition: transform 300ms ease;
+}
+
+.circle {
+  width: var(--base_scale);
+  height: var(--base_scale);
+  background: var(--color);
+  border-radius: 50%;
+}
+
+.semi-circle {
+  height: calc(var(--base_scale) * 2);
+  width: var(--base_scale);
+  background: var(--color);
+  border-bottom-right-radius: calc(var(--base_scale) * 2);
+  border-top-right-radius: calc(var(--base_scale) * 2);
+}
+
+.square {
+  width: var(--base_scale);
+  height: var(--base_scale);
+  background: var(--color);
+}
+
+.rectangle {
+  width: calc(var(--base_scale) * 1.5);
+  height: var(--base_scale);
+  background: var(--color);
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-bottom: var(--base_scale) solid var(--color);
+  border-right: var(--base_scale) solid transparent;
+}
+
+.triangle-2 {
+  width: 0;
+  height: 0;
+  border-top: var(--base_scale) solid var(--color);
+  border-left: var(--base_scale) solid transparent;
+}
+
+.bounce-up {
+  transition: transform 400ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translateY(calc(-20vh - var(--bounce-variance))) rotate(0deg);
+}
+
+.bounce-down {
+  transition: transform 300ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
+  transform: translateY(0) rotate(var(--rotation));
+}
+
+/* Loaders */
+
+.skills-item-three-container {
+  display: grid;
+  grid-template-columns: repeat(2, 12vmin);
+  grid-template-rows: repeat(2, 12vmin);
+  grid-gap: 1vmin;
+}
+
+.loaders-item {
+  cursor: pointer;
+  background: rgba(251, 218, 97, 0.3);
+  display: grid;
+  place-items: center;
+  border-radius: 4px;
+  transition: opacity 0.4s ease;
+}
+
+.skills-item-three-container:hover .loaders-item {
+  opacity: 0.4;
+}
+
+.skills-item-three-container:hover .loaders-item:hover {
+  opacity: 1;
+}
+
+.loader {
+  --color: #111111;
+  --size-mid: 6vmin;
+  --size-dot: 1.5vmin;
+  --size-bar: 0.4vmin;
+  --size-square: 3vmin;
+
+  display: block;
+  position: relative;
+  width: 50%;
+  display: grid;
+  place-items: center;
+}
+
+.loader::before,
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+}
+
+/**
+      loader --1
+  **/
+.loader.--1::before {
+  width: var(--size-mid);
+  height: var(--size-mid);
+  border: 4px solid var(--color);
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: loader-1 1s linear infinite;
+}
+
+.loader.--1::after {
+  width: calc(var(--size-mid) - 2px);
+  height: calc(var(--size-mid) - 2px);
+  border: 2px solid transparent;
+  border-top-color: var(--color);
+  border-radius: 50%;
+  animation: loader-1 0.6s linear reverse infinite;
+}
+
+@keyframes loader-1 {
+  100% {
+    transform: rotate(1turn);
   }
-  to {
+}
+
+/**
+      loader --2
+  **/
+.loader.--2::before,
+.loader.--2::after {
+  width: var(--size-dot);
+  height: var(--size-dot);
+  background-color: var(--color);
+  border-radius: 50%;
+  opacity: 0;
+  animation: loader-2 0.8s cubic-bezier(0.2, 0.32, 0, 0.87) infinite;
+}
+
+.loader.--2::after {
+  animation-delay: 0.3s;
+}
+
+@keyframes loader-2 {
+  0%,
+  80%,
+  100% {
+    opacity: 0;
+  }
+
+  33% {
     opacity: 1;
-    transform: translateX(-50%) translateY(100%) scale(1);
+  }
+
+  0%,
+  100% {
+    transform: translateX(-4vmin);
+  }
+
+  90% {
+    transform: translateX(4vmin);
+  }
+}
+
+/**
+      loader --3
+  **/
+.loader.--3::before,
+.loader.--3::after {
+  width: var(--size-dot);
+  height: var(--size-dot);
+  background-color: var(--color);
+  border-radius: 50%;
+  animation: loader-3 1.2s ease-in-out infinite;
+}
+
+.loader.--3::before {
+  left: calc(50% - 1.6vmin - var(--size-dot));
+}
+
+.loader.--3::after {
+  left: calc(50% + 1.6vmin);
+  animation-delay: -0.4s;
+}
+
+@keyframes loader-3 {
+  0%,
+  100% {
+    transform: translateY(-2.6vmin);
+  }
+
+  44% {
+    transform: translateY(2.6vmin);
+  }
+}
+
+/**
+      loader --4
+  **/
+.loader.--4::before {
+  height: var(--size-bar);
+  width: 6vmin;
+  background-color: var(--color);
+  animation: loader-4 0.8s cubic-bezier(0, 0, 0.03, 0.9) infinite;
+}
+
+@keyframes loader-4 {
+  0%,
+  44%,
+  88.1%,
+  100% {
+    transform-origin: left;
+  }
+
+  0%,
+  100%,
+  88% {
+    transform: scaleX(0);
+  }
+
+  44.1%,
+  88% {
+    transform-origin: right;
+  }
+
+  33%,
+  44% {
+    transform: scaleX(1);
+  }
+}
+
+/* Letter */
+
+.letter-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 200px;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+.animated-mail {
+  position: absolute;
+  height: 150px;
+  width: 200px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  transition: 0.4s;
+
+  .body {
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 100px 200px;
+    border-color: transparent transparent #ff5acd transparent;
+    z-index: 2;
+  }
+
+  .top-fold {
+    position: absolute;
+    top: 50px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 50px 100px 0 100px;
+    -webkit-transform-origin: 50% 0%;
+    -webkit-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
+    -moz-transform-origin: 50% 0%;
+    -moz-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
+    transform-origin: 50% 0%;
+    transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
+    border-color: #f13ebc transparent transparent transparent;
+    z-index: 2;
+  }
+
+  .back-fold {
+    position: absolute;
+    bottom: 0;
+    width: 200px;
+    height: 100px;
+    background: #cb1494;
+    z-index: 0;
+  }
+
+  .left-fold {
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 50px 0 50px 100px;
+    border-color: transparent transparent transparent #ec32b4;
+    z-index: 2;
+  }
+
+  .letter {
+    left: 20px;
+    bottom: 0px;
+    position: absolute;
+    width: 160px;
+    height: 60px;
+    background: white;
+    z-index: 1;
+    overflow: hidden;
+    -webkit-transition: 0.4s 0.2s;
+    -moz-transition: 0.4s 0.2s;
+    transition: 0.4s 0.2s;
+
+    .letter-border {
+      height: 10px;
+      width: 100%;
+      background: repeating-linear-gradient(
+        -45deg,
+        #ec32b4,
+        #ec32b4 8px,
+        transparent 8px,
+        transparent 18px
+      );
+    }
+
+    .letter-title {
+      margin-top: 10px;
+      margin-left: 5px;
+      height: 10px;
+      width: 40%;
+      background: #ec32b4;
+    }
+    .letter-context {
+      margin-top: 10px;
+      margin-left: 5px;
+      height: 10px;
+      width: 20%;
+      background: #ec32b4;
+    }
+
+    .letter-stamp {
+      margin-top: 30px;
+      margin-left: 120px;
+      border-radius: 100%;
+      height: 30px;
+      width: 30px;
+      background: #ec32b4;
+      opacity: 0.3;
+    }
+  }
+}
+
+.shadow {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  width: 400px;
+  height: 30px;
+  transition: 0.4s;
+  transform: translateX(-50%);
+  -webkit-transition: 0.4s;
+  -webkit-transform: translateX(-50%);
+  -moz-transition: 0.4s;
+  -moz-transform: translateX(-50%);
+
+  border-radius: 100%;
+  background: radial-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
+  );
+}
+
+.letter-image:hover {
+  .animated-mail {
+    transform: translateY(50px);
+    -webkit-transform: translateY(50px);
+    -moz-transform: translateY(50px);
+  }
+
+  .animated-mail .top-fold {
+    transition: transform 0.4s, z-index 0.2s;
+    transform: rotateX(180deg);
+    -webkit-transition: transform 0.4s, z-index 0.2s;
+    -webkit-transform: rotateX(180deg);
+    -moz-transition: transform 0.4s, z-index 0.2s;
+    -moz-transform: rotateX(180deg);
+    z-index: 0;
+  }
+
+  .animated-mail .letter {
+    height: 180px;
+  }
+
+  .shadow {
+    width: 250px;
+  }
+}
+
+/* Flip btn */
+
+.btn-flip {
+  opacity: 1;
+  outline: 0;
+  line-height: 60px;
+  position: relative;
+  text-align: center;
+  letter-spacing: 1px;
+  display: inline-block;
+  font-size: 36px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.btn-flip:hover:after {
+  opacity: 1;
+  transform: translateY(0) rotateX(0);
+}
+
+.btn-flip:hover:before {
+  opacity: 0;
+  transform: translateY(50%) rotateX(90deg);
+}
+
+.btn-flip:after {
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  color: #ffffff;
+  display: block;
+  transition: 0.5s;
+  position: absolute;
+  background: #fbda61;
+  content: attr(data-back);
+  transform: translateY(-50%) rotateX(90deg);
+}
+
+.btn-flip:before {
+  top: 0;
+  left: 0;
+  opacity: 1;
+  color: #ffffff;
+  display: block;
+  padding: 0 30px;
+  line-height: 60px;
+  transition: 0.5s;
+  position: relative;
+  background: #ff5acd;
+  content: attr(data-front);
+  transform: translateY(0) rotateX(0);
+}
+
+/* Letter O */
+
+.letter-o {
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2vw 2vw 0 1px rgba(0, 0, 0, 0.2);
+  width: 25vw;
+  height: 25vw;
+}
+
+.counter {
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: inset 2vw 2vw 0 1px rgba(0, 0, 0, 0.2);
+  transform: translate3d(0, 0, 0) rotate(0deg);
+  width: 15vw;
+  height: 15vw;
+  animation: counterAnim 6s cubic-bezier(0.75, -1.21, 0.59, 1.89) infinite;
+}
+
+@keyframes counterAnim {
+  12%,
+  25% {
+    width: 15vw;
+    height: 22vw;
+  }
+  37%,
+  50% {
+    width: 10vw;
+    height: 22vw;
+    transform: translate3d(0, 0, 0) rotate(8deg);
+  }
+  63%,
+  75% {
+    width: 18vw;
+    height: 18vw;
+  }
+  87% {
+    width: 15vw;
+    height: 15vw;
+  }
+}
+
+/* Styles for large Tablet devices */
+@media only screen and (min-width: 1024px) {
+  .letter-o {
+    width: 20vw;
+    height: 20vw;
+  }
+
+  .counter {
+    width: 10vw;
+    height: 10vw;
+  }
+
+  @keyframes counterAnim {
+    12%,
+    25% {
+      width: 10vw;
+      height: 17vw;
+    }
+    37%,
+    50% {
+      width: 5vw;
+      height: 17vw;
+    }
+    63%,
+    75% {
+      width: 13vw;
+      height: 13vw;
+    }
+    87% {
+      width: 10vw;
+      height: 10vw;
+    }
+  }
+}
+
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1440px) {
+  .letter-o {
+    width: 16vw;
+    height: 16vw;
+  }
+
+  .counter {
+    width: 6vw;
+    height: 6vw;
+  }
+
+  @keyframes counterAnim {
+    12%,
+    25% {
+      width: 6vw;
+      height: 13vw;
+    }
+    37%,
+    50% {
+      width: 1vw;
+      height: 13vw;
+    }
+    63%,
+    75% {
+      width: 9vw;
+      height: 9vw;
+    }
+    87% {
+      width: 6vw;
+      height: 6vw;
+    }
   }
 }
