--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,19 +1,24 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
+  font-family: 'Inter', serif;
+  font-size: 18px;
   line-height: 1.5;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  --bg-color: #ffffff;
+  --text-color: #111111;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --alpha: 0.8;
+}
+
+.dark-theme {
+  --bg-color: #111111;
+  --text-color: #ffffff;
 }
 
 body {
@@ -22,11 +27,65 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  overflow-x: hidden;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.4s ease, color 0.4s ease;
+  overflow-x: hidden;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 main {
   flex-grow: 1;
 }
+
 main:has(.back-link) {
   text-align: center;
+}
+
+.section-title {
+  font-size: 36px;
+  font-weight: 400;
+  text-align: center;
+  position: relative;
+}
+
+.section-title::after {
+  position: absolute;
+  content: '';
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+  width: 280px;
+  height: 1px;
+  background-color: var(--text-color);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #fbda61;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+html {
+  scrollbar-color: #fbda61 transparent;
+  scrollbar-width: thin;
+}
+
+/* Dark theme */
+
+.dark-theme .section-title::after {
+  background-color: var(--text-color);
 }
