--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,249 @@
+/* Styles for Mobile devices */
 .header {
-  padding: 20px 0;
+  padding: 36px 24px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 998;
+  background-color: var(--bg-color);
 }
-.nav {
+
+.header-wrapper {
+  width: 100%;
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: space-between;
+  gap: 24px;
 }
+
 .nav-logo {
-  display: inline-flex;
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  transition: color 0.3s ease-in-out;
+  color: var(--text-color);
+}
+
+.nav-logo::before {
+  content: attr(data-text);
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(0deg, #ff5acd, #fbda61);
+  background-size: 300%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, background-position 0.5s ease-in-out;
+}
+
+.nav-logo:hover::before {
+  opacity: 1;
+  background-position: 100%;
+}
+
+.nav-logo:hover {
+  color: transparent;
+}
+
+.nav-list {
+  display: none;
+}
+
+.nav-btn-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  align-items: center;
+}
+
+.burger-menu {
+  background-color: transparent;
+  background-image: none;
+  border: none;
+  box-shadow: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  stroke: var(--text-color);
+}
+
+.theme-toggle {
+  background-image: none;
+  background-color: transparent;
+  box-shadow: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 0;
+  transition: transform 0.3s ease-in-out;
+}
+
+.lang-toggle {
+  background-image: none;
+  background-color: transparent;
+  box-shadow: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-family: 'Nunito', serif;
+  font-size: 35px;
+  font-weight: 700;
+  color: var(--text-color);
+
+  padding: 0;
+  transition: color 0.3s ease-in-out;
+}
+
+.lang-toggle:hover,
+.lang-toggle:focus {
+  color: #ff5acd;
+}
+
+.theme-toggle:hover {
+  transform: rotate(180deg);
+}
+
+.theme-icon {
+  stroke: var(--text-color);
+}
+
+.desktop-menu-btn {
+  display: none;
+}
+
+/* Mobile menu */
+.mobile-menu {
+  display: none;
+}
+
+.mobile-menu.is-open {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 600px;
+  z-index: 1000;
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.nav-list {
+
+.close-menu-btn {
+  background: none;
+  border: none;
+  stroke: var(--text-color);
+  position: absolute;
+  top: 43px;
+  right: 27px;
+  padding: 0;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+  justify-content: center;
 }
-.nav-link {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+
+.menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+
+.menu-item {
+  font-size: 24px;
 }
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
+
+/* Dark theme */
+
+.dark-theme .nav-logo {
+  color: var(--text-color);
 }
-.nav-link.active::after {
-  background: #747bff;
+
+.dark-theme .burger-menu .close-menu-btn {
+  stroke: var(--text-color);
+}
+
+.dark-theme .mobile-menu .header {
+  background-color: var(--bg-color);
+}
+
+/* Styles for large Tablet devices */
+@media only screen and (min-width: 1024px) {
+  .header {
+    padding: 36px 32px;
+  }
+
+  .burger-menu {
+    display: none;
+  }
+
+  .desktop-menu-btn {
+    background: none;
+    background-color: transparent;
+    color: var(--text-color);
+    display: block;
+    padding: 10px 15px;
+    font-size: 24px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    position: relative;
+  }
+
+  .nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav-list {
+    position: absolute;
+    top: 35;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 43px;
+    transform: translateX(100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s;
+    white-space: nowrap;
+    background: var(--bg-color);
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .nav-list.active {
+    transform: translateX(-45%);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .nav-item {
+    font-size: 24px;
+    transition: color 0.2s ease-in-out;
+  }
+
+  .nav-item:hover,
+  .nav-item:focus {
+    color: #ff5acd;
+  }
+
+  .dark-theme .nav-list {
+    background: var(--bg-color);
+  }
 }
