--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -16,6 +16,19 @@
           <a href="tel:+48791931481" class="info-link">+48 791 931 481</a>
         </li>
         <li class="info-item">
+          <a href="https://github.com/tanyf5" class="info-link" target="_blank"
+            >Github</a
+          >
+        </li>
+        <li class="info-item">
+          <a
+            href="https://tanyf5.github.io/bachariewa-cv/"
+            class="info-link"
+            target="_blank"
+            >CV</a
+          >
+        </li>
+        <li class="info-item">
           <p class="info-data" data-lang-key="location">Poland, Cracow</p>
         </li>
       </ul>
@@ -43,35 +56,6 @@
           data-lang-key="send"
         />
       </form>
-    </div>
-    <div class="modal-backdrop"></div>
-    <div class="thank-modal">
-      <button class="close-modal-btn">
-        <svg
-          width="36"
-          height="34"
-          viewBox="0 0 36 34"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          class="close-modal-icon"
-        >
-          <line
-            x1="2.70711"
-            y1="1.29289"
-            x2="34.5269"
-            y2="33.1127"
-            stroke-width="2"
-          />
-          <line
-            x1="1.29289"
-            y1="33.1127"
-            x2="33.1127"
-            y2="1.29292"
-            stroke-width="2"
-          />
-        </svg>
-      </button>
-      <p data-lang-key="sent-successfuly">Sent successfuly!</p>
     </div>
   </div>
 </section>
