--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,144 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer class="footer" id="footer">
+  <h2 class="footer-title" data-lang-key="footer-title">Website Description</h2>
+  <p class="page-descr" data-lang-key="footer-descr">
+    This landing is a portfolio website showcasing my skills in creating modern,
+    responsive, and functional websites. My projects are focused on achieving
+    high performance and ease of use for the end users. Here are some key
+    aspects of my site:
+  </p>
+  <div class="footer-wrapper container">
+    <div class="tech-used-wrapper">
+      <ul class="tech-used-list">
+        <li class="tech-used-item" data-lang-key="html-css">
+          <span class="tech-used-title" data-lang-key="html-css-title"
+            >HTML5 and CSS3</span
+          >
+          : Core technologies for structuring and styling pages, ensuring modern
+          and clean markup with high accessibility
+        </li>
+        <li class="tech-used-item" data-lang-key="js">
+          <span class="tech-used-title" data-lang-key="js-title"
+            >JavaScript (ES6)</span
+          >
+          : Used for interactive elements of the site, such as animations,
+          sliders, and other dynamic features
+        </li>
+      </ul>
+    </div>
+    <div class="tech-used-wrapper">
+      <p class="tech-used-title" data-lang-key="responsiveness">
+        Responsiveness
+      </p>
+      <ul class="tech-used-list">
+        <li class="tech-used-item" data-lang-key="mobile">
+          <span class="tech-used-title" data-lang-key="mobile-title"
+            >Mobile Devices</span
+          >: The container's maximum width is 375px
+        </li>
+        <li class="tech-used-item" data-lang-key="small-tablets">
+          <span class="tech-used-title" data-lang-key="small-tablets-title"
+            >Small tablets</span
+          >: The container's maximum width is 744px
+        </li>
+        <li class="tech-used-item" data-lang-key="large-tablets">
+          <span class="tech-used-title" data-lang-key="large-tablets-title"
+            >Large tablets</span
+          >: The container's maximum width is 1024px
+        </li>
+        <li class="tech-used-item" data-lang-key="desktops">
+          <span class="tech-used-title" data-lang-key="desktops-title"
+            >Desktops</span
+          >: The container's maximum width is 1440px
+        </li>
+      </ul>
+    </div>
+    <div class="tech-used-wrapper">
+      <p class="tech-used-title" data-lang-key="interactive-elements">
+        Interactive Elements
+      </p>
+      <ul class="tech-used-list">
+        <li class="tech-used-item" data-lang-key="vanilla-tilt">
+          <span class="tech-used-title" data-lang-key="vanilla-tilt-title"
+            >Vanilla Tilt</span
+          >: A lightweight library for creating 3D effects when hovering over
+          elements
+        </li>
+        <li class="tech-used-item" data-lang-key="typed-js">
+          <span class="tech-used-title" data-lang-key="typed-js-title"
+            >Typed.js</span
+          >: For creating animated text on the site, adding dynamism
+        </li>
+        <li class="tech-used-item" data-lang-key="sweetalert2">
+          <span class="tech-used-title" data-lang-key="sweetalert2-title"
+            >SweetAlert2</span
+          >: For implementing beautiful and user-friendly pop-up windows
+          (alerts)
+        </li>
+        <li class="tech-used-item" data-lang-key="emailjs">
+          <span class="tech-used-title" data-lang-key="emailjs-title"
+            >EmailJS</span
+          >: For integrating contact forms, allowing users to send messages
+          without server-side configuration
+        </li>
+      </ul>
+    </div>
+    <div class="tech-used-wrapper">
+      <p class="tech-used-title" data-lang-key="animations-effects">
+        Animations and Effects
+      </p>
+      <ul class="tech-used-list">
+        <li class="tech-used-item" data-lang-key="css-animations">
+          CSS animations are used for smooth color transitions, as well as hover
+          transitions for buttons and other elements
+        </li>
+        <li class="tech-used-item" data-lang-key="progress-bar">
+          A progress bar shows the page load progress, adding interactivity and
+          improving the user experience
+        </li>
+      </ul>
+    </div>
+    <div class="tech-used-wrapper">
+      <p class="tech-used-title" data-lang-key="optimization">Optimization</p>
+      <ul class="tech-used-list">
+        <li class="tech-used-item" data-lang-key="font-image-optimization">
+          Font and image optimization for fast page loading
+        </li>
+        <li class="tech-used-item" data-lang-key="adaptive-scrollbar">
+          Adaptive scrollbar width for different browsers
+        </li>
+        <li class="tech-used-item" data-lang-key="advanced-css">
+          Advanced CSS techniques like font-smoothing and text-rendering are
+          applied to ensure high-quality text rendering on all devices
+        </li>
+      </ul>
+    </div>
+    <div class="tech-used-wrapper">
+      <p class="tech-used-title" data-lang-key="dark-theme">Dark Theme</p>
+      <ul class="tech-used-list">
+        <li class="tech-used-item" data-lang-key="dark-theme-description">
+          The website supports a dark theme for a more comfortable viewing
+          experience in low light conditions. All styles automatically change
+          using CSS variables, allowing for efficient management of colors and
+          backgrounds
+        </li>
+      </ul>
+    </div>
+    <div class="tech-used-wrapper">
+      <p class="tech-used-title" data-lang-key="external-libraries">
+        External Libraries
+      </p>
+      <ul class="tech-used-list">
+        <li
+          class="tech-used-item"
+          data-lang-key="external-libraries-description"
+        >
+          For user interaction, SweetAlert2 is used for pop-ups, and EmailJS
+          integrates with the contact form on the site
+        </li>
+      </ul>
+    </div>
+  </div>
+  <p class="footer-copyright" data-lang-key="footer-copyright">
+    © <span id="year"></span> Tetiana Bachariewa. All rights reserved
+  </p>
 </footer>
