--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -3,7 +3,11 @@
   <div class="projects-wrapper">
     <ul class="projects-list">
       <li class="projects-item">
-        <a href="https://tanyf5.github.io/chocolate/" class="proj-img-link">
+        <a
+          href="https://tanyf5.github.io/chocolate/"
+          class="proj-img-link"
+          target="_blank"
+        >
           <picture class="proj-img">
             <source srcset="./img/choco-4.jpg" media="(min-width: 1440px)" />
             <source srcset="./img/choco-3.jpg" media="(min-width: 1024px)" />
@@ -20,57 +24,11 @@
             and a modern, visually appealing interface.
           </p>
           <div class="proj-link-wrapper">
-            <a href="https://github.com/tanyf5/chocolate" title="Visit Github">
-              <svg
-                class="github-icon"
-                width="31"
-                height="30"
-                viewBox="0 0 31 30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M15.5003 0.916672C13.5852 0.916672 11.6889 1.29388 9.91953 2.02676C8.15019 2.75964 6.54254 3.83384 5.18835 5.18803C2.45345 7.92294 0.916992 11.6323 0.916992 15.5C0.916992 21.9458 5.10241 27.4146 10.892 29.3542C11.6212 29.4708 11.8545 29.0188 11.8545 28.625V26.1604C7.81491 27.0354 6.95449 24.2063 6.95449 24.2063C6.28366 22.5146 5.33574 22.0625 5.33574 22.0625C4.00866 21.1583 5.43783 21.1875 5.43783 21.1875C6.89616 21.2896 7.66908 22.6896 7.66908 22.6896C8.93783 24.9063 11.0816 24.25 11.9128 23.9C12.0441 22.9521 12.4232 22.3104 12.8316 21.9458C9.59408 21.5813 6.19616 20.3271 6.19616 14.7708C6.19616 13.1521 6.75033 11.8542 7.69824 10.8188C7.55241 10.4542 7.04199 8.93751 7.84408 6.96876C7.84408 6.96876 9.06908 6.57501 11.8545 8.45626C13.0066 8.13542 14.2607 7.97501 15.5003 7.97501C16.7399 7.97501 17.9941 8.13542 19.1462 8.45626C21.9316 6.57501 23.1566 6.96876 23.1566 6.96876C23.9587 8.93751 23.4482 10.4542 23.3024 10.8188C24.2503 11.8542 24.8045 13.1521 24.8045 14.7708C24.8045 20.3417 21.392 21.5667 18.1399 21.9313C18.6649 22.3833 19.1462 23.2729 19.1462 24.6292V28.625C19.1462 29.0188 19.3795 29.4854 20.1232 29.3542C25.9128 27.4 30.0837 21.9458 30.0837 15.5C30.0837 13.5849 29.7065 11.6885 28.9736 9.9192C28.2407 8.14987 27.1665 6.54222 25.8123 5.18803C24.4581 3.83384 22.8505 2.75964 21.0811 2.02676C19.3118 1.29388 17.4154 0.916672 15.5003 0.916672Z"
-                />
-              </svg>
-            </a>
-            <a href="https://tanyf5.github.io/chocolate/" title="Visit website">
-              <svg
-                class="attach-icon"
-                width="31"
-                height="31"
-                viewBox="0 0 31 31"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M15.0082 5.16406L17.7426 2.42968C18.4536 1.7187 19.2976 1.15471 20.2266 0.769931C21.1555 0.385148 22.1512 0.187103 23.1566 0.187103C24.1621 0.187103 25.1578 0.385148 26.0867 0.76993C27.0157 1.15471 27.8597 1.7187 28.5707 2.42968C29.2817 3.14067 29.8457 3.98473 30.2305 4.91367C30.6152 5.84262 30.8133 6.83826 30.8133 7.84374C30.8133 8.84923 30.6152 9.84487 30.2305 10.7738C29.8457 11.7028 29.2817 12.5468 28.5707 13.2578L23.102 18.7266C22.391 19.4376 21.5469 20.0016 20.618 20.3864C19.689 20.7712 18.6934 20.9693 17.6879 20.9693C16.6824 20.9693 15.6867 20.7712 14.7578 20.3864C13.8288 20.0016 12.9848 19.4376 12.2738 18.7266C11.9842 18.4154 11.8265 18.004 11.8338 17.5789C11.8411 17.1539 12.013 16.7482 12.3132 16.4472C12.6142 16.147 13.0199 15.9751 13.4449 15.9678C13.87 15.9604 14.2814 16.1182 14.5926 16.4078C14.9986 16.8151 15.481 17.1383 16.0122 17.3588C16.5433 17.5793 17.1128 17.6928 17.6879 17.6928C18.263 17.6928 18.8324 17.5793 19.3636 17.3588C19.8948 17.1383 20.3772 16.8151 20.7832 16.4078L26.252 10.9391C27.0329 10.1101 27.4603 9.00952 27.4433 7.87075C27.4264 6.73197 26.9664 5.6446 26.1611 4.83927C25.3558 4.03395 24.2684 3.57403 23.1296 3.55707C21.9909 3.54011 20.8903 3.96744 20.0613 4.74843L17.327 7.48281C17.0158 7.77245 16.6044 7.93018 16.1793 7.92283C15.7543 7.91549 15.3486 7.74365 15.0476 7.44343C14.7474 7.14242 14.5755 6.73675 14.5682 6.31169C14.5608 5.88662 14.7186 5.47525 15.0082 5.16406ZM4.74883 26.2516C5.15485 26.6588 5.63727 26.982 6.16843 27.2025C6.69958 27.423 7.26904 27.5365 7.84414 27.5365C8.41925 27.5365 8.9887 27.423 9.51985 27.2025C10.051 26.982 10.5334 26.6588 10.9395 26.2516L13.6738 23.5172C13.985 23.2275 14.3964 23.0698 14.8215 23.0772C15.2465 23.0845 15.6522 23.2563 15.9532 23.5566C16.2534 23.8576 16.4253 24.2632 16.4326 24.6883C16.4399 25.1134 16.2822 25.5247 15.9926 25.8359L13.2582 28.5703C12.5472 29.2813 11.7032 29.8453 10.7742 30.2301C9.84526 30.6148 8.84962 30.8129 7.84414 30.8129C5.81347 30.8129 3.86598 30.0062 2.43008 28.5703C0.99418 27.1344 0.1875 25.1869 0.1875 23.1562C0.1875 21.1256 0.99418 19.1781 2.43008 17.7422L7.89883 12.2734C8.60979 11.5624 9.45384 10.9984 10.3828 10.6136C11.3117 10.2288 12.3074 10.0307 13.3129 10.0307C14.3184 10.0307 15.314 10.2288 16.243 10.6136C17.1719 10.9984 18.016 11.5624 18.727 12.2734C19.0166 12.5846 19.1743 12.996 19.167 13.4211C19.1596 13.8461 18.9878 14.2518 18.6876 14.5528C18.3866 14.853 17.9809 15.0249 17.5558 15.0322C17.1308 15.0396 16.7194 14.8818 16.4082 14.5922C16.0022 14.1849 15.5198 13.8617 14.9886 13.6412C14.4574 13.4207 13.888 13.3072 13.3129 13.3072C12.7378 13.3072 12.1683 13.4207 11.6372 13.6412C11.106 13.8617 10.6236 14.1849 10.2176 14.5922L4.74883 20.0609C4.34153 20.467 4.01838 20.9494 3.79788 21.4805C3.57738 22.0117 3.46388 22.5811 3.46388 23.1562C3.46388 23.7313 3.57738 24.3008 3.79788 24.832C4.01838 25.3631 4.34153 25.8455 4.74883 26.2516Z"
-                />
-              </svg>
-            </a>
-          </div>
-        </div>
-      </li>
-      <li class="projects-item">
-        <a href="https://tanyf5.github.io/web-studio/" class="proj-img-link">
-          <picture class="proj-img">
-            <source srcset="./img/web-st-4.jpg" media="(min-width: 1440px)" />
-            <source srcset="./img/web-st-3.jpg" media="(min-width: 1024px)" />
-            <source srcset="./img/web-st-2.jpg" media="(min-width: 768px)" />
-            <source srcset="./img/web-st-1.jpg" media="(min-width: 375px)" />
-            <img src="./img/web-st-1.jpg" alt="Web Studio" />
-          </picture>
-        </a>
-        <div class="project-card-bottom">
-          <h3 class="project-title">Web Studio</h3>
-          <p class="project-descr" data-lang-key="web-studio">
-            The site is fully responsive, ensuring a seamless experience across
-            all devices. A user-friendly interface with smooth navigation and
-            optimized performance, highlighting the studio's capabilities in
-            crafting custom websites for businesses.
-          </p>
-          <div class="proj-link-wrapper">
-            <a href="https://github.com/tanyf5/web-studio" title="Visit Github">
+            <a
+              href="https://github.com/tanyf5/chocolate"
+              title="Visit Github"
+              target="_blank"
+            >
               <svg
                 class="github-icon"
                 width="31"
@@ -85,8 +43,9 @@
               </svg>
             </a>
             <a
-              href="https://tanyf5.github.io/web-studio/"
+              href="https://tanyf5.github.io/chocolate/"
               title="Visit website"
+              target="_blank"
             >
               <svg
                 class="attach-icon"
@@ -105,7 +64,73 @@
         </div>
       </li>
       <li class="projects-item">
-        <a href="tanyf5.github.io/smart-notes-repo/" class="proj-img-link">
+        <a
+          href="https://tanyf5.github.io/web-studio/"
+          class="proj-img-link"
+          target="_blank"
+        >
+          <picture class="proj-img">
+            <source srcset="./img/web-st-4.jpg" media="(min-width: 1440px)" />
+            <source srcset="./img/web-st-3.jpg" media="(min-width: 1024px)" />
+            <source srcset="./img/web-st-2.jpg" media="(min-width: 768px)" />
+            <source srcset="./img/web-st-1.jpg" media="(min-width: 375px)" />
+            <img src="./img/web-st-1.jpg" alt="Web Studio" />
+          </picture>
+        </a>
+        <div class="project-card-bottom">
+          <h3 class="project-title">Web Studio</h3>
+          <p class="project-descr" data-lang-key="web-studio">
+            The site is fully responsive, ensuring a seamless experience across
+            all devices. A user-friendly interface with smooth navigation and
+            optimized performance, highlighting the studio's capabilities in
+            crafting custom websites for businesses.
+          </p>
+          <div class="proj-link-wrapper">
+            <a
+              href="https://github.com/tanyf5/web-studio"
+              title="Visit Github"
+              target="_blank"
+            >
+              <svg
+                class="github-icon"
+                width="31"
+                height="30"
+                viewBox="0 0 31 30"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M15.5003 0.916672C13.5852 0.916672 11.6889 1.29388 9.91953 2.02676C8.15019 2.75964 6.54254 3.83384 5.18835 5.18803C2.45345 7.92294 0.916992 11.6323 0.916992 15.5C0.916992 21.9458 5.10241 27.4146 10.892 29.3542C11.6212 29.4708 11.8545 29.0188 11.8545 28.625V26.1604C7.81491 27.0354 6.95449 24.2063 6.95449 24.2063C6.28366 22.5146 5.33574 22.0625 5.33574 22.0625C4.00866 21.1583 5.43783 21.1875 5.43783 21.1875C6.89616 21.2896 7.66908 22.6896 7.66908 22.6896C8.93783 24.9063 11.0816 24.25 11.9128 23.9C12.0441 22.9521 12.4232 22.3104 12.8316 21.9458C9.59408 21.5813 6.19616 20.3271 6.19616 14.7708C6.19616 13.1521 6.75033 11.8542 7.69824 10.8188C7.55241 10.4542 7.04199 8.93751 7.84408 6.96876C7.84408 6.96876 9.06908 6.57501 11.8545 8.45626C13.0066 8.13542 14.2607 7.97501 15.5003 7.97501C16.7399 7.97501 17.9941 8.13542 19.1462 8.45626C21.9316 6.57501 23.1566 6.96876 23.1566 6.96876C23.9587 8.93751 23.4482 10.4542 23.3024 10.8188C24.2503 11.8542 24.8045 13.1521 24.8045 14.7708C24.8045 20.3417 21.392 21.5667 18.1399 21.9313C18.6649 22.3833 19.1462 23.2729 19.1462 24.6292V28.625C19.1462 29.0188 19.3795 29.4854 20.1232 29.3542C25.9128 27.4 30.0837 21.9458 30.0837 15.5C30.0837 13.5849 29.7065 11.6885 28.9736 9.9192C28.2407 8.14987 27.1665 6.54222 25.8123 5.18803C24.4581 3.83384 22.8505 2.75964 21.0811 2.02676C19.3118 1.29388 17.4154 0.916672 15.5003 0.916672Z"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://tanyf5.github.io/web-studio/"
+              title="Visit website"
+              target="_blank"
+            >
+              <svg
+                class="attach-icon"
+                width="31"
+                height="31"
+                viewBox="0 0 31 31"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M15.0082 5.16406L17.7426 2.42968C18.4536 1.7187 19.2976 1.15471 20.2266 0.769931C21.1555 0.385148 22.1512 0.187103 23.1566 0.187103C24.1621 0.187103 25.1578 0.385148 26.0867 0.76993C27.0157 1.15471 27.8597 1.7187 28.5707 2.42968C29.2817 3.14067 29.8457 3.98473 30.2305 4.91367C30.6152 5.84262 30.8133 6.83826 30.8133 7.84374C30.8133 8.84923 30.6152 9.84487 30.2305 10.7738C29.8457 11.7028 29.2817 12.5468 28.5707 13.2578L23.102 18.7266C22.391 19.4376 21.5469 20.0016 20.618 20.3864C19.689 20.7712 18.6934 20.9693 17.6879 20.9693C16.6824 20.9693 15.6867 20.7712 14.7578 20.3864C13.8288 20.0016 12.9848 19.4376 12.2738 18.7266C11.9842 18.4154 11.8265 18.004 11.8338 17.5789C11.8411 17.1539 12.013 16.7482 12.3132 16.4472C12.6142 16.147 13.0199 15.9751 13.4449 15.9678C13.87 15.9604 14.2814 16.1182 14.5926 16.4078C14.9986 16.8151 15.481 17.1383 16.0122 17.3588C16.5433 17.5793 17.1128 17.6928 17.6879 17.6928C18.263 17.6928 18.8324 17.5793 19.3636 17.3588C19.8948 17.1383 20.3772 16.8151 20.7832 16.4078L26.252 10.9391C27.0329 10.1101 27.4603 9.00952 27.4433 7.87075C27.4264 6.73197 26.9664 5.6446 26.1611 4.83927C25.3558 4.03395 24.2684 3.57403 23.1296 3.55707C21.9909 3.54011 20.8903 3.96744 20.0613 4.74843L17.327 7.48281C17.0158 7.77245 16.6044 7.93018 16.1793 7.92283C15.7543 7.91549 15.3486 7.74365 15.0476 7.44343C14.7474 7.14242 14.5755 6.73675 14.5682 6.31169C14.5608 5.88662 14.7186 5.47525 15.0082 5.16406ZM4.74883 26.2516C5.15485 26.6588 5.63727 26.982 6.16843 27.2025C6.69958 27.423 7.26904 27.5365 7.84414 27.5365C8.41925 27.5365 8.9887 27.423 9.51985 27.2025C10.051 26.982 10.5334 26.6588 10.9395 26.2516L13.6738 23.5172C13.985 23.2275 14.3964 23.0698 14.8215 23.0772C15.2465 23.0845 15.6522 23.2563 15.9532 23.5566C16.2534 23.8576 16.4253 24.2632 16.4326 24.6883C16.4399 25.1134 16.2822 25.5247 15.9926 25.8359L13.2582 28.5703C12.5472 29.2813 11.7032 29.8453 10.7742 30.2301C9.84526 30.6148 8.84962 30.8129 7.84414 30.8129C5.81347 30.8129 3.86598 30.0062 2.43008 28.5703C0.99418 27.1344 0.1875 25.1869 0.1875 23.1562C0.1875 21.1256 0.99418 19.1781 2.43008 17.7422L7.89883 12.2734C8.60979 11.5624 9.45384 10.9984 10.3828 10.6136C11.3117 10.2288 12.3074 10.0307 13.3129 10.0307C14.3184 10.0307 15.314 10.2288 16.243 10.6136C17.1719 10.9984 18.016 11.5624 18.727 12.2734C19.0166 12.5846 19.1743 12.996 19.167 13.4211C19.1596 13.8461 18.9878 14.2518 18.6876 14.5528C18.3866 14.853 17.9809 15.0249 17.5558 15.0322C17.1308 15.0396 16.7194 14.8818 16.4082 14.5922C16.0022 14.1849 15.5198 13.8617 14.9886 13.6412C14.4574 13.4207 13.888 13.3072 13.3129 13.3072C12.7378 13.3072 12.1683 13.4207 11.6372 13.6412C11.106 13.8617 10.6236 14.1849 10.2176 14.5922L4.74883 20.0609C4.34153 20.467 4.01838 20.9494 3.79788 21.4805C3.57738 22.0117 3.46388 22.5811 3.46388 23.1562C3.46388 23.7313 3.57738 24.3008 3.79788 24.832C4.01838 25.3631 4.34153 25.8455 4.74883 26.2516Z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </li>
+      <li class="projects-item">
+        <a
+          href="tanyf5.github.io/smart-notes-repo/"
+          class="proj-img-link"
+          target="_blank"
+        >
           <picture class="proj-img">
             <source srcset="./img/sm-n-4.jpg" media="(min-width: 1440px)" />
             <source srcset="./img/sm-n-3.jpg" media="(min-width: 1024px)" />
@@ -126,6 +151,7 @@
             <a
               href="https://github.com/tanyf5/smart-notes-repo"
               title="Visit Github"
+              target="_blank"
             >
               <svg
                 class="github-icon"
@@ -140,7 +166,11 @@
                 />
               </svg>
             </a>
-            <a href="tanyf5.github.io/smart-notes-repo/" title="Visit website">
+            <a
+              href="tanyf5.github.io/smart-notes-repo/"
+              title="Visit website"
+              target="_blank"
+            >
               <svg
                 class="attach-icon"
                 width="31"
@@ -161,6 +191,7 @@
         <a
           href="https://tanyf5.github.io/portfolio-team-10/"
           class="proj-img-link"
+          target="_blank"
         >
           <picture class="proj-img">
             <source srcset="./img/portf-4.jpg" media="(min-width: 1440px)" />
@@ -184,6 +215,7 @@
             <a
               href="https://github.com/tanyf5/portfolio-team-10"
               title="Visit Github"
+              target="_blank"
             >
               <svg
                 class="github-icon"
@@ -201,6 +233,7 @@
             <a
               href="https://tanyf5.github.io/portfolio-team-10/"
               title="Visit website"
+              target="_blank"
             >
               <svg
                 class="attach-icon"
@@ -222,6 +255,7 @@
         <a
           href="https://oleksandr-karnaushenko.github.io/Project-group-8/"
           class="proj-img-link"
+          target="_blank"
         >
           <picture class="proj-img">
             <source srcset="./img/jet-4.jpg" media="(min-width: 1440px)" />
@@ -247,6 +281,7 @@
             <a
               href="https://github.com/Oleksandr-Karnaushenko/Project-group-8"
               title="Visit Github"
+              target="_blank"
             >
               <svg
                 class="github-icon"
@@ -264,6 +299,7 @@
             <a
               href="https://oleksandr-karnaushenko.github.io/Project-group-8/"
               title="Visit website"
+              target="_blank"
             >
               <svg
                 class="attach-icon"
