--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,114 @@
+/* Styles for Mobile devices */
+
 .footer {
-  padding: 20px 0;
+  background-color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+.footer-title {
+  font-size: 36px;
+  font-weight: 400;
+  text-align: center;
+  position: relative;
+  color: var(--bg-color);
+  margin-top: 35px;
+  margin-bottom: 20px;
+}
+
+.footer-title::after {
+  position: absolute;
+  content: '';
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+  width: 280px;
+  height: 1px;
+  background-color: var(--bg-color);
+}
+
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-descr {
+  color: var(--bg-color);
+  font-size: 14px;
+  max-width: 327px;
+  text-align: center;
+}
+
+.tech-used-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-width: 327px;
+}
+
+.tech-used-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.tech-used-item {
+  color: var(--bg-color);
+  font-size: 14px;
+}
+
+.tech-used-title {
+  color: var(--bg-color);
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.footer-copyright {
+  font-size: 12px;
+  text-align: center;
+  color: var(--bg-color);
+}
+
+/* Styles for small Tablet devices */
+@media only screen and (min-width: 744px) {
+  .page-descr {
+    max-width: 696px;
+  }
+
+  .footer-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+}
+
+/* Styles for large Tablet devices */
+@media only screen and (min-width: 1024px) {
+  .page-descr {
+    max-width: 738px;
+  }
+
+  .tech-used-wrapper {
+    max-width: 280px;
+  }
+}
+
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1440px) {
+  .page-descr {
+    max-width: 800px;
+  }
+
+  .tech-used-wrapper {
+    max-width: 250px;
+  }
 }
