--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,12 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">CV</a>
+          <a
+            class="nav-link"
+            href="https://tanyf5.github.io/bachariewa-cv/"
+            target="_blank"
+            >CV</a
+          >
         </li>
         <li class="nav-item-contact">
           <button
@@ -110,7 +115,12 @@
         >
       </li>
       <li class="menu-item">
-        <a class="menu-link {=$highlight-curr}" href="">CV</a>
+        <a
+          class="menu-link {=$highlight-curr}"
+          href="https://tanyf5.github.io/bachariewa-cv/"
+          target="_blank"
+          >CV</a
+        >
       </li>
       <li class="menu-item-contact">
         <button
