--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -24,6 +24,19 @@ a {
   text-decoration: none;
 }
 
+button,
+a,
+.btn {
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+}
+
+button:focus,
+a:focus {
+  outline: none;
+}
+
 button {
   cursor: pointer;
 }
