--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -122,7 +122,7 @@
           >CV</a
         >
       </li>
-      <li class="menu-item-contact">
+      <li class="menu-item">
         <button
           class="menu-link-contact"
           href="#contact"
