--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -22,7 +22,7 @@
         </li>
         <li class="info-item">
           <a
-            href="https://tanyf5.github.io/bachariewa-cv/"
+            href="https://drive.google.com/file/d/1bobciW_bSUA2cpZy2n7XcXh9sf5HaCx6/view?usp=sharing"
             class="info-link"
             target="_blank"
             >CV</a
