--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,11 +21,12 @@
             >Projects</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item-cv">
           <a
             class="nav-link"
-            href="https://tanyf5.github.io/bachariewa-cv/"
+            href="https://drive.google.com/file/d/1bobciW_bSUA2cpZy2n7XcXh9sf5HaCx6/view?usp=sharing"
             target="_blank"
+            rel="noopener noreferrer"
             >CV</a
           >
         </li>
@@ -114,11 +115,12 @@
           >Projects</a
         >
       </li>
-      <li class="menu-item">
+      <li class="menu-item-cv">
         <a
-          class="menu-link {=$highlight-curr}"
-          href="https://tanyf5.github.io/bachariewa-cv/"
+          class="menu-link"
+          href="https://drive.google.com/file/d/1bobciW_bSUA2cpZy2n7XcXh9sf5HaCx6/view?usp=sharing"
           target="_blank"
+          rel="noopener noreferrer"
           >CV</a
         >
       </li>
